# kanjidic_utilities

./: .gitignore  Cargo.toml  Dockerfile  README.md  schema.gql
.cargo/: config.toml
assets/: kanjidic2.json
kanjidic_converter/: Cargo.toml  README.md
kanjidic_converter/src/: main.rs
kanjidic_database_populator/: Cargo.toml
kanjidic_database_populator/src/: main.rs
kanjidic_parser/: Cargo.toml  README.md
kanjidic_parser/src/: busy_people.rs  chapter.rs  character.rs  codepoint.rs  database_version.rs  date_of_creation.rs  de_roo.rs  dictionary_reference.rs  file_version.rs  four_corner.rs  grade.rs  header.rs  kangxi.rs  kanjidic.rs  kunyomi.rs  kuten.rs  language_code.rs  lib.rs  meaning.rs  moro.rs  node_number.rs  oneill.rs  pin_yin.rs  pos_error.rs  query_code.rs  radical.rs  reading.rs  reference.rs  shared.rs  skip.rs  spahn_hadamitzky.rs  stroke_count.rs  test_shared.rs  translation.rs  variant.rs  xml_error.rs
kanjidic_server/: .env  Cargo.toml  README.md  Rocket.toml
kanjidic_server/migrations/2021-08-10-031635_kanji/: down.sql  up.sql
kanjidic_server/migrations/2021-08-10-033839_de_roo/: up.sql
kanjidic_server/src/: cache.rs  character_response.rs  cors.rs  decomposition_route.rs  field.rs  kanji_literals_route.rs  kanji_route.rs  main.rs  radical_response.rs  radicals_route.rs  schema.rs  shared.rs  startup.rs  translation_route.rs
kanjidic_types/: Cargo.toml  README.md
kanjidic_types/src/: busy_people.rs  character.rs  codepoint.rs  database_version.rs  date_of_creation.rs  de_roo.rs  four_corner.rs  grade.rs  header.rs  kangxi.rs  kanjidic.rs  kunyomi.rs  kuten.rs  language_code.rs  lib.rs  meaning.rs  moro.rs  oneill.rs  pin_yin.rs  query_code.rs  radical.rs  reading.rs  reference.rs  shared.rs  skip.rs  spahn_hadamitzky.rs  stroke_count.rs  translation.rs  variant.rs
kanjidic_types/src/spahn_hadamitzky/: descriptor.rs  mod.rs  radical.rs
