[package]
name = "kanjidic_parser"
version = "0.1.3"
edition = "2018"
license = "CC-BY-SA-3.0"
description = "A parser for the Kanjidic XML format."
homepage = "https://github.com/tim-harding/kanjidic_utilities"
repository = "https://github.com/tim-harding/kanjidic_utilities"
readme = "README.md"

[dependencies]
thiserror = "1.0.35"
roxmltree = "0.19.0"
nom = "7.1.1"
kanjidic_types = { version = "0.1.4", path = "../kanjidic_types" }
serde = { version = "1.0.144", features = ["derive"] }
kradical_static = "0.2.0"

[dev-dependencies]
lazy_static = "1.4.0"
