[package]
name = "kanjidic_server"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
kanjidic_types = { path = "../kanjidic_types"}
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
kradical_static = "0.2.0"
clap = { version = "3.2.22", features = ["derive"] }
thiserror = "1.0.35"