[package]
name = "kanjidic_server"
version = "0.1.2"
edition = "2018"
license = "CC-BY-SA-3.0"
description = "A REST API server for Kanjidic and EDRDG radical decompositions."
homepage = "https://github.com/tim-harding/kanjidic_utilities"
repository = "https://github.com/tim-harding/kanjidic_utilities"
readme = "README.md"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
kanjidic_types = { version = "0.1.4", path = "../kanjidic_types" }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
kradical_static = "0.2.0"
clap = { version = "4.4.18", features = ["derive"] }
thiserror = "1.0.35"
