[package]
name = "kanjidic_types"
version = "0.1.0"
edition = "2018"
license = "CC-BY-NC-SA-3.0"
description = "A collection of types encompassing the variety of data about kanji available from Kanjidic."
homepage = "https://github.com/tim-harding/kanjidic_utilities"
repository = "https://github.com/tim-harding/kanjidic_utilities"
readme = "README.md"

[dependencies]
num_enum = "0.5.7"
serde = { version = "1.0.144", features = ["derive"] }
serde_repr = "0.1.9"
nom = "7.1.1"
thiserror = "1.0.35"